Final styling for lightbox

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,14 @@
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=PT+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap"
+      rel="stylesheet"
+    />
     <title>VUTTR</title>
   </head>
   <body>
